--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-
-streamlit>=1.34.0
-matplotlib
-numpy
-soundfile
-noisereduce
-scipy
-
-librosa
-streamlit-webrtc==0.45.0
-
+streamlit>=1.28       # 1.28 + is known to accept inline CSS reliably
+streamlit-webrtc>=0.53
+noisereduce>=3.0
+librosa>=0.10
+soundfile>=0.12
+numpy>=1.24
+scipy>=1.11
+matplotlib>=3.7
+av>=10.0
